# rola

./: .ghci  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  build.sh  cabal.project.freeze  default.nix  load.sh  rola.cabal  rola.nix  run.sh  shell.nix  stack.yaml
app/: Main.hs
nix/: load.sh  run.sh
src/: Church.hs  Rola.hs
src/Rola/: Eval.hs  Parser.hs  Pretty.hs  Syntax.hs
test/: Spec.hs
